Fix text align; Add table overflow scroll

--- a/src/components/optimization-result/result-table/result-table.module.scss
+++ b/src/components/optimization-result/result-table/result-table.module.scss
@@ -1,5 +1,9 @@
 .ResultTable {
-  border-collapse: collapse;
+  overflow: auto;
+  max-width: 100%;
+  table {
+    border-collapse: collapse;
+  }
 
   .headerRow {
     background-color: var(--mui-palette-primary-main);
