--- a/src/index.css
+++ b/src/index.css
@@ -8,4 +8,5 @@ body {
   display: flex;
   flex-direction: column;
   height: 100%;
+  text-align: center;
 }
